listeners - Assign to a picking group depends on the department - verify the assignment